[package]
name = "ipic_vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
ipinfo = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }