[package]
name = "ipic_vision"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
ipinfo = "3.1.1"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["parking_lot"] }
openssl = { version = "0.10", features = ["vendored"] }